--- a/references.bib
+++ b/references.bib
@@ -765,4 +765,43 @@
   pages      = {ix+394},
 }
 
+@Article{Malle2007,
+  author     = {Malle, Gunter},
+  journal    = {Represent. Theory},
+  title      = {Height 0 characters of finite groups of {L}ie type},
+  year       = {2007},
+  issn       = {1088-4165},
+  pages      = {192--220},
+  volume     = {11},
+  doi        = {10.1090/S1088-4165-07-00312-3},
+  fjournal   = {Representation Theory. An Electronic Journal of the American Mathematical Society},
+  mrclass    = {20C33 (20G40)},
+  mrnumber   = {2365640},
+  mrreviewer = {Gerhard\ Hiss},
+  url        = {https://doi.org/10.1090/S1088-4165-07-00312-3},
+}
+
+@Article{LaumonLetellier2023,
+  author     = {Laumon, G\'erard and Letellier, Emmanuel},
+  journal    = {Adv. Math.},
+  title      = {Note on a conjecture of {B}raverman-{K}azhdan},
+  year       = {2023},
+  issn       = {0001-8708,1090-2082},
+  pages      = {Paper No. 108962, 48},
+  volume     = {419},
+  doi        = {10.1016/j.aim.2023.108962},
+  fjournal   = {Advances in Mathematics},
+  mrclass    = {20G05},
+  mrnumber   = {4560998},
+  mrreviewer = {Christopher\ P.\ Bendel},
+  url        = {https://doi.org/10.1016/j.aim.2023.108962},
+}
+
+@Article{ChenBhattacharya2024,
+  author = {Chen, Tsao-Hsien and Bhattacharya, Sarbartha},
+  title  = {A description of the integral depth-$r$ {B}ernstein center},
+  year   = {2024},
+  note   = {\href{https://arxiv.org/abs/2407.15128}{arXiv:2407.15128}},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
