--- a/paper.tex
+++ b/paper.tex
@@ -678,7 +678,7 @@ In this section we prove a slightly weaker result:
 
 \begin{lemma}
 \label{lem:indep_geo_conj}
-    If $(T,\theta)$ and $(T', \theta)$ are geometrically conjugate, then $$\frac{\dblVirtualJacobiSumScalar{R_{T, \theta}}{\chi}}{R_{T,\theta}(1)} = \frac{\dblVirtualJacobiSumScalar{R_{T', \theta'}}{\chi}}{R_{T,\theta}(1)}.$$
+    If $(T,\theta)$ and $(T', \theta)$ are geometrically conjugate, then $$\frac{\dblVirtualJacobiSumScalar{R_{T, \theta}}{\chi}}{R_{T,\theta}(1)} = \frac{\dblVirtualJacobiSumScalar{R_{T', \theta'}}{\chi}}{R_{T',\theta'}(1)}.$$
 \end{lemma}
 
 
