--- a/paper.tex
+++ b/paper.tex
@@ -682,7 +682,7 @@ In this section we prove a slightly weaker result:
 \end{lemma}
 
 
-For a torus theta pair $(T,\theta)$ with associated Frobenius conjugacy classes $w \in W(\algebraicGroup{T})$ and $(s) \subset G^*$ and an embedding $\rho:G^* \to \GL_n$.  Fix a Frobenius stable maximal torus $\algebraicGroup{T}^* \subset G^*$ and a Frobenius stable maximal torus $\algebraicGroup{T} \subset \GL_n$ which contains $\rho(\algebraicGroup{T}^*)$. Let $\tilde{T}$ be the torus of $\GL_n$ corresponding to the Frobenius conjugacy class of $\rho(w) \in W(\algebraicGroup{T})$ and $\tilde{\theta}$ such that $(\rho(s)) = (s_{\tilde{T},\tilde{\theta}})$. Define
+For a torus character pair $(T,\theta)$ with associated Frobenius conjugacy classes $w \in W(\algebraicGroup{T})$ and $(s) \subset G^*$ and an embedding $\rho:G^* \to \GL_n$.  Fix a Frobenius stable maximal torus $\algebraicGroup{T}^* \subset G^*$ and a Frobenius stable maximal torus $\algebraicGroup{T} \subset \GL_n$ which contains $\rho(\algebraicGroup{T}^*)$. Let $\tilde{T}$ be the torus of $\GL_n$ corresponding to the Frobenius conjugacy class of $\rho(w) \in W(\algebraicGroup{T})$ and $\tilde{\theta}$ such that $(\rho(s)) = (s_{\tilde{T},\tilde{\theta}})$. Define
 \[
     g_{T,\rho}(\theta,\psi,\chi) := \varepsilon_{\algebraicGroup{
     \tilde{T}}}\sum_{t\in \tilde{T}} \tilde{\theta}(t)\chi(\det(t))\psi(\trace(t)).
@@ -739,7 +739,7 @@ The idea behind the proof of \Cref{lem:indep_geo_conj} is that the formula from 
 Note that in the $SO$ and $GSO$ case, the map $\rho$ sends the split torus of $G^*$ into the split torus of $\GL(2n)$ and the induced map of cocharacters sends $x \mapsto (x,-x)$. In the $Sp,GSp$ cases the map is similar: the induced map of cocharacters sends $x \mapsto (x,1,-x)$. In the unitary case, the torus whose $\finiteField$ points are $(\NormOneGroup{2})^n \subset G^*(\finiteField)$ includes into the torus in $\GL(2n)$ whose $\finiteField$ points are $(\finiteFieldExtension{2}^\times)^n$ and the induced map of cocharacters is $(x_1,x_2, \hdots, x_n) \mapsto (x_1,-x_1,x_2,-x_2, \hdots ,x_n,-x_n)$. 
 
 
-In particular to analyze $g_{T,\rho}(\theta,\psi,\chi)$ for these $\rho$, we need to understand what torus theta pair of $\GL$ corresponds to $\phi((s))$ under a map $\phi(x) = (x,-x)$:
+In particular to analyze $g_{T,\rho}(\theta,\psi,\chi)$ for these $\rho$, we need to understand what torus character pair of $\GL$ corresponds to $\phi((s))$ under a map $\phi(x) = (x,-x)$:
 %The following computation in the proof of theorem \ref{lem:indep_geo_conj}.
 
 \begin{lemma}
